fix: styling ahead/behind component

--- a/src/app/shared/components/branch-ahead-behind/branch-ahead-behind.component.scss
+++ b/src/app/shared/components/branch-ahead-behind/branch-ahead-behind.component.scss
@@ -7,8 +7,12 @@
 }
 
 .updownarrow {
-    margin-left: -3px;
+    margin-left: -2px;
     margin-top: -3px;
+}
+
+span:first-child {
+    margin-right: 5px;
 }
 
 .smaller {
